letras y tipos de letras

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,11 @@
+.Comienza-el-Nertworking {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+}
 
-
+.Presiona {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+}
