--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .Presiona {
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
     font-size: 16px;
 }
+
