--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,13 @@
     font-size: 16px;
 }
 
+.lmaria {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px; 
+    text-align: left;
+}
+
+.activa {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px; 
+}
