--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
     font-size: 16px;
 }
 
-.container{
+.container {
     border: 3px solid #e8ebe4;
 }
 
@@ -22,7 +22,7 @@
 .activa1 {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
-    color:#BEC1BB;
+    color: #BEC1BB;
 }
 
 .activa {
@@ -30,6 +30,7 @@
     font-size: 16px;
     color: #1B1F21;
 }
+
 .button {
     display: flex;
     justify-content: center;
@@ -55,7 +56,16 @@
     border-radius: 50%;
 
 }
+
 .container2 {
-    
+
     border: 2px solid #e8ebe4;
+}
+
+.icono {
+    
+    padding: 40px;
+    display: flex;
+    justify-content: space-between;
+color: #ffffff;
 }
